Revert "fixed extra space in header component"
This reverts commit 00b97c645d94b23d16e709430c2c306d2f01f42e.

fixed extra space in header component

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,8 +1,7 @@
 @import "../../_globalColor";
-/*React-headroom*/
-.headroom-wrapper {
-  max-height: 100px;
-}
+
+
+
 /* header */
 
 .dark-menu {
@@ -102,9 +101,8 @@
   transition: all 0.2s ease-out;
   width: 100%;
 }
-.header .menu-icon .navicon-dark {
-  background: $textColorDark;
-}
+
+
 
 .header .menu-icon .navicon-dark:before,
 .header .menu-icon .navicon-dark:after {
@@ -136,7 +134,7 @@
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon {
-  background: transparent !important;
+  background: transparent;
 }
 
 .header .menu-btn:checked ~ .menu-icon .navicon:before {
